--- a/estilo.css
+++ b/estilo.css
@@ -18,6 +18,7 @@ body{
 				linear-gradient(50deg,#0080ff,#00bfff);
 	background-attachment: fixed;
 	font-family: Arial, Helvetica, sans-serif;
+	overflow-x: hidden;
 
 }
 
@@ -68,7 +69,7 @@ nav.navbar-transparente{
 	-webkit-border-radius: 500px;
 	-moz-border-radius: 500px;
 	padding: 10px 35px;
-	margin: 0px 15px;
+	margin: 5px 15px;
 	text-transform: uppercase;
 	transition: background 0.4s, color 0.4s;
 	/*border: 2px solid white;*/
@@ -87,6 +88,28 @@ nav.navbar-transparente{
 	background-color: white;
 	color: black;
 }
+/* -- Seção serviços -- */
+#servicos{
+	background: white;
+	padding-top: 20px;
+	padding-bottom: 20px; 
+}
+.albuns {
+	padding: 10px 0px 10px 0px;
+}
+
+/* -- Seção Recuros -- */
+#recursos{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: white;
+}
+.rotacionar{
+	transform: rotate(30deg);
+	-ms-transform: rotate(30deg);
+	-webkit-transform: rotate(30deg);
+	padding-left: 80px;
+}
 
 
 /******************** Tipografia ********************/
@@ -95,4 +118,21 @@ h1 {
 	font-weight: 900;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
+}
+h2 {
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+h3 {
+	font-size: 35px;
+	font-weight: 900;
+	letter-spacing: -0.04em;
+}
+#servicos h2, #servicos h3 {
+	color: #0040ff;
+}
+
+#recursos h3 {
+	color: #0010ff;
 }
