--- a/estilo.css
+++ b/estilo.css
@@ -7,9 +7,10 @@
 */
 
 /******************** Layout ********************/
-/* -- IBody -- */
+/* -- Body -- */
 html, body, .capa {
-	height:  100%
+	height:  100%;
+	overflow: auto;
 }
 body{
 	background: url('imagens/capa.png'),
@@ -29,7 +30,7 @@ body{
 	display: block;
 	background: url('imagens/spotify.svg') no-repeat;
 	background-size: contain;
-	color: transparent;;
+	color: transparent;
 }
 nav.navbar-transparente{
 	padding: 15px 0px;
@@ -69,8 +70,6 @@ nav.navbar-transparente{
 	border-radius: 500px;
 	-webkit-border-radius: 500px;
 	-moz-border-radius: 500px;
-	padding: 10px 35px;
-	margin: 5px 15px;
 	text-transform: uppercase;
 	transition: background 0.4s, color 0.4s;
 	/*border: 2px solid white;*/
@@ -124,7 +123,6 @@ footer {
 
 /******************** Tipografia ********************/
 h1 {
-	font-size: 100px;
 	font-weight: 900;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
@@ -151,4 +149,38 @@ h3 {
 	color: #919496;
 	font-size: 12px;
 	text-transform: uppercase;
+}
+
+/******************** Media Queries ********************/
+
+/*XS < 768*/
+@media screen and (max-width: 767px){
+	h1{
+		font-size: 50px;
+	}
+		.btn-custom{
+		margin: 10px 15px;
+	}
+
+}
+/*SM */
+@media screen and (min-width: 767px){
+	h1{
+		font-size: 70px;
+	}
+
+}
+/*MD*/
+@media screen and (min-width: 992px){
+	h1{
+		font-size: 100px;
+	}
+
+}
+/*LG*/
+@media screen and (min-width: 1200px){
+	h1{
+		font-size: 100px;
+	}
+
 }
